examples/manifests/a_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: triage-party
  labels:
    addonmanager.kubernetes.io/mode: Reconcile
