examples/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: triage-party
  namespace: triage-party
spec:
  selector:
    matchLabels:
      app: triage-party
  template:
    metadata:
      labels:
        app: triage-party
    spec:
      containers:
      - name: triage-party
        image: triageparty/triage-party
        imagePullPolicy: Always
        volumeMounts:
        - name: config
          mountPath: /app/config
      volumes:
      - name: config
        configMap:
          name: triageparty-config
