examples/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: triage-party
  namespace: triage-party
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: triage-party
